# modular-vla-adapter

./: .gitignore  README.md  pyproject.toml
configs/: train_libero_hdf5_qwen35_vit.example.ps1  train_libero_minicpm_v.example.yaml  train_libero_qwen35_vit.example.yaml  train_rlds_qwen35_vit.example.yaml
docs/: architecture.md  framework_map.md  project_handoff.md  remote_env.md  security.md  system_overview.md  training.md
env_process/: __init__.py  codecs.py  protocols.py
env_process/backends/: __init__.py  base.py  fake.py  libero.py
env_process/clients/: __init__.py  zmq_server.py
examples/: fake_backbone_smoke.py  qwen35_vit_policy.py  tiny_adapter_remote_eval.py
pretrained_models/: README.md
prismatic_adapter/: __init__.py  checkpoint.py  config.py  config_loader.py  data.py  factory.py  inference.py  model.py  pipeline.py  registry.py  sequence.py  types.py
prismatic_adapter/action_heads/: __init__.py  bridge.py
prismatic_adapter/adapters/: __init__.py  base.py  hf_prismatic.py  qwen_vit.py
prismatic_adapter/backbones/: __init__.py  base.py  (+2 more)
scripts/: download_vision_backbones.py  eval_qwen35_vit_remote.py  eval_with_remote_env.py  prepare_libero_hdf5.py  serve_fake_env.py  serve_libero_env.py  train_minicpm_v.py  train_qwen35_vit.py
tests/: test_actions.py  test_conditioning.py  test_config_loader.py  test_libero_dataset.py  test_libero_hdf5_dataset.py  test_minicpm_adapter.py  test_processors.py  test_rlds_dataset.py  test_runtime_policy.py  test_sequence.py  test_vision_backbone.py
vla_runtime/: __init__.py  env_client.py  recorder.py
(+37 files in other folders)
