[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismatic-vla-adapter"
version = "0.1.0"
description = "A small, backbone-agnostic Prismatic-style VLA adapter framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "VLA Adapter Contributors" }]
dependencies = [
    "torch>=2.1",
]

[project.optional-dependencies]
runtime = [
    "numpy>=1.24",
    "pyzmq>=25",
]
data = [
    "h5py>=3.10",
]
hf = [
    "transformers>=4.40",
    "huggingface-hub>=0.23",
    "peft>=0.10",
    "safetensors>=0.4",
    "timm>=0.9",
    "wandb>=0.16",
]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["env_process*", "prismatic_adapter*", "vla_runtime*"]

[tool.ruff]
line-length = 100
target-version = "py310"
